style.css
/* ... */
.column-section .col-1 {
	width: 80%;
	max-width: 150px;
	min-width: 80px;
	margin-bottom: 10px;
}
.column-section .col-1 img {
	width: 100%;
	display: block;
}
.column-section .col-2 {
	-webkit-box-flex: 1 1 auto;
	-moz-box-flex: 1 1 auto;
	-webkit-flex: 1 1 auto;
	-ms-flex: 1 1 auto;
	flex: 1 1 auto;
	width: 100%;
}
.entry-content .column-section .col-2 h2 {
	color: grey;
	font-size: 24px;
	font-family: 'Droid Serif', serif;
	margin-bottom: 5px;
}
#primary .entry-content .column-section .col-2 .copy {
	color: grey;
	font-size: 12px;
}
#primary .entry-content .column-section .col-2 .copy p {
	color: grey;
	font-size: 16px;
}
/* EVENTS PAGE */
.template-events .widget-area {
	margin-bottom: 40px;
}
.tiles * {
	box-sizing: border-box;
}
.tiles .tile {
	width: 100%;
	padding: 0 0 3.5% 0;
}
.tiles .tile .inner-wrapper {
	border: 2px solid grey;
}
.tiles .tile:hover .inner-wrapper {
	box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
}
#offset {
	display: none;
}
.events .tile .row-1 {
	padding: 10px 10px 30px 10px;
}
.events .tile .row-1 img {
	width: 100%;
	display: block;
}
.events .tile .row-1 h2 {
	margin: 20px 0 0 0;
	font-size: 20px;
	font-family: 'Oswald', sans-serif;
	color: #813F27;
	
}
.events .tile .row-1 .date {
	margin: 15px 0 0 0;
	font-size: 14px;
	font-weight: 700;
}
.events .tile .row-1 .venue {
	margin: 15px 0 0 0;
	font-size: 12px;
}
.events .tile .row-2 {
	color: #813F27;
	padding: 5px;
	background-color: lightgrey;	
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
	-webkit-align-content: center;
	align-content: center;
	-webkit-justify-content: space-between;
	justify-content: space-between;
}
.events .tile .row-2 .col-1 {
	font-size: 25px;
}
.events .tile .row-2 .col-2 {
	font-size: 12px;
	text-align: right;
	max-width: 60%;
}
/*==============JOB BOARD PAGE ===============*/
.jobs-banner{
	padding: 30px;
	text-align: center;
	color: white;
	position: relative;
}
.jobs-banner:before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,.5);
}
.jobs-banner .background{
	background-size: cover;
	background-position: center;
	position: absolute;
	top: 0;
	left: 0;
	z-index: -2;
	width: 100%;
	height: 100%;
}
.jobs-banner >.row-1 {
	font-size: 20px;
}
.jobs-banner .statistics {
	margin: 24px 0 0 0;
}
.jobs-banner .statistics ul {
	margin: 0;
	padding: 0;
}
.jobs-banner .statistics li {
	display: block;
	font-size: 18px;
	list-style-type: none;
	margin: 10px 0 0 0;
}
.jobs-banner >.row-2 {
	margin: 30px 0 0 0;
}
.jobs-banner >.row-2 .banner-button {
	margin: 10px 5px 0 5px;
	color: #803F26;
	background-color: white;
	padding: 10px 20px;
	text-transform: uppercase;
	font-size: 20px;
	display: inline-block;
	cursor: pointer;
}
.jobs-banner >.row-3 {
	margin: 30px 0 0 0;
}
.jobs-banner >.row-3 form >.row-1 {
	display: table;
	margin: 0 auto;
}
.jobs-banner >.row-3 form >.row-1 input {
	background-color: white;
	color: black;
	float: left;
	font-size: 18px;
	width: calc(100% - 32px);
	box-sizing: border-box;
}
.jobs-banner >.row-3 form >.row-1 button {
	box-sizing: border-box;
	background-color: black;
	color: white;
	width: 32px;
	font-size: 18px;
	border: 1px solid white;
	float: left;
}
.jobs-banner >.row-3 form >.row-2 {
	margin: 20px 0 0 0;
}
.jobs-banner >.row-3 form >.row-3 {
	margin: 10px 0 0 0;
}
.jobs-banner >.row-3 form >.row-2, .jobs-banner >.row-3 form >.row-3 {
	
}
.jobs-banner >.row-3 form >.row-2 ul, .jobs-banner >.row-3 form >.row-3 ul {
}
.jobs-banner >.row-3 form >.row-2 ul li, .jobs-banner >.row-3 form >.row-3 ul li {
	list-style-type: none;
	font-size: 18px;
	margin: 5px 0 0 0;
}
.jobs-banner >.row-3 form >.row-2 ul li input, .jobs-banner >.row-3 form >.row-3 ul li input {
	border: 1px solid white;
	background: none;
	box-shadow: none;
	text-shadow: none;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	border-radius: 50%;
	width: 12px;
	height: 12px;
	vertical-align: middle;
	margin: 0 5px 0 0;
}
.jobs-banner >.row-3 form >.row-2 ul li input:checked, .jobs-banner >.row-3 form >.row-3 ul li input:checked {
	border: 6px solid white;
}
.jobs-banner >.row-3 form >.row-2 ul li label, .jobs-banner >.row-3 form >.row-3 ul li label {
	font-size: 18px;
	vertical-align: middle;
}
/* =========== Job board sidebar =============*/
.job-views {
	text-align: center;
	font-size: 18px;
	padding: 0 10px;
}
.job-sidebar {
	margin: 50px 0;
}
.job-sidebar, .brew-sidebar {
	text-align: center;
	font-size: 18px;
}
.job-sidebar, .brew-sidebar .brew-wrapper {
	padding: 10px;
} 
.job-sidebar .copy, .brew-sidebar .copy {
	text-align: left;
	font-family: 'Raleway', sans-serif;
}
.job-sidebar h3 {
	font-size: 25px;
	margin: 20px 0;
}
.job-sidebar a.button {
	margin: 0 0 20px 0;
} 
.brew-sidebar a.button {
	margin: 20px 0 0 0;
}
.job-sidebar a.button, .brew-sidebar a.button {
	color: white;
	background-color: #803F26;
	padding: 20px 40px;
	text-transform: uppercase;
	font-size: 25px;
	display: inline-block;
	text-align: center;
}
.nav-single h3.show {
	color: black;
	font-family: 'Oswald', sans-serif;
	font-size: 20px;
	margin: 0 0 10px 0;
}
/* ===========SINGLE JOB=========================*/
.single-job {
}
.single-job .entry-content li {
	font-size: 18px;
}
.single-job .job-company-row {
	margin: 0 0 24px 0;

}
.single-job .job-company-row .image img {
	display: block;
	width: 100%;
	margin: 0 0 20px 0;
}
.single-job .job-company-row .data {

}
.single-job .job-company-row .data header {
}
.single-job .job-company-row .data header h2 {
	color: black;
	font-family: "Droid Serif", serif;
	font-size: 25px;
	line-height: 1.2;
	font-weight: 500;
}
.single-job .job-company-row .data .date {
	font-size: 18px;
	color: #803F26;
	font-weight: 300;
	font-family: 'Oswald', sans-serif;
}
/* ... */

